--- a/src/web/App.css
+++ b/src/web/App.css
@@ -3,12 +3,12 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-
-
 }
 .terminal-container {
   flex: 1;
   overflow: hidden;
+  background-color: black;
+
 }
 
 .helper-container {
@@ -18,3 +18,13 @@
   align-items: start;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+}
