--- a/src/web/App.css
+++ b/src/web/App.css
@@ -4,11 +4,15 @@
   display: flex;
   flex-direction: column;
 }
+
 .terminal-container {
   flex: 1;
   overflow: hidden;
   background-color: black;
+}
 
+.terminal-container .xterm-viewport {
+  overflow-y: hidden !important;
 }
 
 .helper-container {
@@ -16,6 +20,7 @@
   display: flex;
   justify-content: left;
   align-items: start;
+  height: 100vh;
 }
 
 body {
