--- a/src/web/App.css
+++ b/src/web/App.css
@@ -7,23 +7,12 @@
 
 .terminal-container {
   flex: 1;
-  height: 100%;
-  border-right: 1px solid #394B59;
-  background-color: #1e1e1e;
-  display: flex;
-  padding: 4px;
-}
-
-.terminal-container > div {
-  flex: 1;
-}
-
-.terminal-container .xterm {
-  height: 100%;
+  overflow: hidden;
+  background-color: black;
 }
 
 .terminal-container .xterm-viewport {
-  overflow-y: auto !important;
+  overflow-y: hidden !important;
 }
 
 .helper-container {
@@ -37,22 +26,10 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
   overflow: hidden;
 }
 
 #root {
-  height: 100vh;
-}
-
-.app-container {
-  display: flex;
-  height: 100vh;
-  background-color: #293742;
-}
-
-.chat-container {
-  flex: 1;
+  width: 100%;
   height: 100%;
-  background-color: #293742;
 }
